--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "typescript": "^4.5.2"
   },
   "dependencies": {
+    "chalk": "^5.0.0",
     "dotenv": "^10.0.0",
     "mineflayer": "^3.11.2",
     "mineflayer-tps": "^1.0.1",
