--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "typescript": "^4.5.2"
   },
   "dependencies": {
+    "@types/mysql": "^2.15.19",
     "chalk": "^5.0.0",
     "dotenv": "^10.0.0",
     "mineflayer": "^3.11.2",
